[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subnet-info"
version = "0.1.0"
description = "Show your IP subnet for AWS firewall rules"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Nithin" }
]

[project.scripts]
subnet-info = "subnet_info.main:main"
