[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subnet-info-cli"
version = "0.1.1"
description = "Show your IP subnet for AWS firewall rules"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Nithin" }
]

[project.scripts]
subnet-info = "subnet_info.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/subnet_info"]
